src/app/modules/HomePage/SideBar/sidebar.scss
.side-bar {
  text-align: left;
  position: relative;
  top: -$search_bar_height - 10px;
  left: 0;
  //padding-top: 10px;
  padding-left: $side_padding;
  font-size: $small_font;
  width: $homepage_side_bar_width;
  background-color: $theme_light_bg;

  > ul {
    @extend .undo-list;
    > li {
      a > i {
        display: inline-block;
        width: 20px;
      }
    }
    margin-bottom: 20px;
  }

  .demo-links {
    a {
      font-style: italic;
    }
  }

  > label {
    font-weight: $font_weight_bold;
  }

  .previous-links,
  .social-links {
    padding-left: 5px;

    .linkedin {
      i {
        color: $linkedin_blue;
      }
    }
    .twitter {
      i {
        color: $twitter_blue;
      }
    }
    .stack-overflow {
      i {
        color: $stack_overflow_orange;
      }
    }
    .github {
      i {
        color: $github_grey;
      }
    }
    a {
      color: inherit;
      text-decoration: none;
    }
  }
}

